chore(prisma): ajusta schema, gera migration inicial e corrige auth middleware

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "start": "node dist/server.js",
     "test": "jest --runInBand",
     "lint": "eslint . --ext .ts"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.16.2"
   }
 }
